--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 </li>
                 </ul>
                 <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item">
-                    <a class="nav-link" href="#">Time: </a>
+                    <li class="nav-item" id="timer">
+                     
                     </li>
                 </ul>
             </div>
