start quiz button is now hooked up

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
                 </li>
                 </ul>
                 <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item" id="timer">
-                     
-                    </li>
+                    <li class="nav-item" id="timer"></li>
                 </ul>
             </div>
             </div>
@@ -31,7 +29,7 @@
             <div class="col-12 col-lg-6 text-center mx-auto my-5">
                 <h2 class="py-3">Coding Quiz Challenge</h2>
                 <p class="py-1">Try to answer the following code-related questions within the time limit. Keep in mind incorrect answers will penalize your score/time by ten seconds!</p>
-                <button type="button" class="btn btn-primary">Start Quiz</button>
+                <button type="button" id="startButton" class="btn btn-primary">Start Quiz</button>
             </div>
         </div>
     </div><!-- End container -->
