starting to populate the questions

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
         </nav>
 
         <div class="row">
-            <div class="col-12 col-lg-6 text-center mx-auto my-5">
-                <h2 class="py-3">Coding Quiz Challenge</h2>
-                <p class="py-1">Try to answer the following code-related questions within the time limit. Keep in mind incorrect answers will penalize your score/time by ten seconds!</p>
-                <button type="button" id="startButton" class="btn btn-primary">Start Quiz</button>
+            <div id="quizContainer" class="col-12 col-lg-6 text-center mx-auto my-5">
+                <h2 id="quizHeader" class="py-3">Coding Quiz Challenge</h2>
+                <p id="quizParagraph" class="py-1">Try to answer the following code-related questions within the time limit. Keep in mind incorrect answers will penalize your score/time by ten seconds!</p>
+                <div id="quizButtonGroup">
+                    <button type="button" id="startButton" class="btn btn-primary">Start Quiz</button>
+                </div>
             </div>
         </div>
     </div><!-- End container -->
