mostly works! hope to refactor

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active color-primary" href="#" onclick="highScorePage()">View high scores</a>
+                    <a class="nav-link active color-primary" href="#" onclick="viewHighScores()">View high scores</a>
                 </li>
                 </ul>
                 <ul class="navbar-nav mb-2 mb-lg-0">
